# flactal

./: .gitignore  README.md
mandelbulb_3d/: Cargo.toml  README.md
mandelbulb_3d/gpu/: Cargo.toml
mandelbulb_3d/gpu/shaders/: mandelbulb.wgsl
mandelbulb_3d/gpu/src/: main.rs
mandelbulb_3d/src/: main.rs
python/: .gitignore  README.md  mandelbrot.py
python/rust_ext/: Cargo.toml
python/rust_ext/src/: lib.rs
python_and_rust/: README.md  mandelbrot.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs  main.rs  main_gpu.rs  main_highprecision.rs  mandelbrot.wgsl
rust/src/common/: colors.rs  constants.rs  font.rs  mandelbrot.rs  mod.rs
