[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"
authors = ["katoy"]
description = "マンデルブロ集合を描画するRustプログラム（インタラクティブ版）"
default-run = "mandelbrot"

[lib]
name = "mandelbrot"
path = "src/lib.rs"

[[bin]]
name = "mandelbrot"
path = "src/main.rs"

[[bin]]
name = "mandelbrot-hp"
path = "src/main_highprecision.rs"

[[bin]]
name = "mandelbrot-gpu"
path = "src/main_gpu.rs"

[dependencies]
image = "0.25"
rayon = "1.10"
num-complex = "0.4"
minifb = "0.28"
rug = "1.27"
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }

